--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,50 +1,42 @@
 @import 'fonts';
 
-$yellowCard: #fff000;
+$background: #000011;
 
-html,
-.app {
-  background-color: $yellowCard;
+html {
+  background-color: $background;
+  font-size: 14px;
 }
 .navbar {
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
   .navbar-list {
     list-style-type: none;
+    text-align: center;
+    padding: 0;
     li {
       display: inline;
-      padding: 25px;
+      padding: 1em;
     }
   }
 }
 
-ul.glossary {
-  list-style-type: none;
-  padding: 10px;
-  li.word {
-    border: 5px solid black;
-    padding: 10px;
-    margin: 10px 5px;
-    background-color: white;
-    .title {
-      font-weight: bold;
-      font-size: 20px;
+.item {
+  max-width: 600px;
+  margin: 0 auto;
+
+  #message-container {
+    transition: opacity .3s cubic-bezier(0.63, 0.64, 0.3, 1);
+    text-align: center;
+    font-size: 4em;
+    padding: 30px;
+    &.hide {
+      opacity: 0;
     }
-    .voteCount {
-      font-size: 30px;
-    }
-    .btn {
-      border-radius: 50%;
-      background-color: black;
-      color: white;
-      margin-right: 5px;
-      font-size: 20px;
-      transition: .5s;
-      float: left;
-      &:hover {
-        background-color: red;
-      }
+    &.show {
+      opacity: 1;
     }
   }
-}
 
+}
